# reservation

./: .env  Cargo.toml  README.md
abi/: Cargo.toml  build.rs
abi/fixtures/: config.yaml
abi/protos/: reservation.proto
abi/src/: config.rs  lib.rs  utils.rs
abi/src/error/: conflict.rs  mod.rs
abi/src/pb/: mod.rs  reservation.rs
abi/src/types/: mod.rs  request.rs  reservation.rs  reservation_filter.rs  reservation_query.rs  reservation_status.rs
migrations/: 20221204101425_reservation.up.sql  20221204101628_reservation_trigger.up.sql  20221204101909_reservation_func.down.sql  20221204101909_reservation_func.up.sql
reservation/: Cargo.toml
reservation/src/: error.rs  lib.rs  manager.rs
rfcs/: 0001-core-reservation.md  template.md
service/: Cargo.toml
service/fixtures/: config.yaml
service/src/: config.rs  lib.rs  main.rs  service.rs  test_utils.rs
service/tests/: service.rs
sqlx-db-tester/: Cargo.toml
sqlx-db-tester/migrations/: 20221222095839_todo.sql
sqlx-db-tester/src/: lib.rs
