[package]
name = "abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
prost = "0.11.3"
prost-types = "0.11.2"
tonic = { version = "0.8.3", features = ["gzip"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
thiserror = "1.0.37"
regex = "1.7.0"

[build-dependencies]
tonic-build = "0.8.4"
