[package]
name = "reservation"
version = "0.1.0"
edition = "2021"

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
anyhow = "1.0.66"
async-trait = "0.1.59"
chrono = { version = "0.4.23", features = ["serde"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
thiserror = "1.0.37"
