[package]
name = "reservation"
version = "0.1.0"
edition = "2021"

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
anyhow = "1.0.66"
async-trait = "0.1.59"
chrono = { version = "0.4.23", features = ["serde"] }
futures = { version = "0.3.25", default-features = false }
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
] }
thiserror = "1.0.37"
tokio = { version = "1.23.0", features = ["sync"] }
tracing = "0.1.37"


[dev-dependencies]
prost-types = "0.11.2"
sqlx-database-tester = { version = "0.4.2", features = ["runtime-tokio"] }
tokio = { version = "1.23.0", features = ["full"] }
