[package]
name = "reservation-service"
version = "0.1.0"
edition = "2021"

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
sqlx-db-tester = { version = "0.1.0", path = "../sqlx-db-tester" }
anyhow = "1.0.66"
futures = { version = "0.3.25", default-features = false }
reservation = { version = "0.1.0", path = "../reservation" }
serde = { version = "1.0.150", features = ["derive"] }
shellexpand = "3.0.0"
tokio = { version = "1.23.0", features = ["full"] }
tonic = { version = "0.8.3", features = ["tokio-rustls", "gzip"] }
tokio-stream = "0.1.11"
once_cell = "1.16.0"

[dev-dependencies]
rand = "0.8.5"
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
] }
