[package]
name = "sqlx-db-tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.2", features = [
    "uuid",
    "postgres",
    "chrono",
    "runtime-tokio-rustls",
] }
tokio = { version = "1.23.0", features = ["macros", "rt", "rt-multi-thread"] }
uuid = { version = "1.2.2", features = ["v4"] }
